--- a/about.html
+++ b/about.html
@@ -4,165 +4,49 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About | Bita Digital Hub</title>
-  <meta name="description" content="Learn more about Bita Digital Hub — a free collection of smart, practical, and time-saving tools built by data engineer Bita Ashoori to make online work easier for everyone.">
-  <meta name="keywords" content="about Bita Digital Hub, Bita Ashoori, free online tools, productivity, file converter, zip tool, password generator, Vancouver">
-
-  <link rel="stylesheet" href="./css/style.css" />
-  <link rel="icon" type="image/png" href="./assets/taskhub-logo.png" />
-
-  <!-- 📈 Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YHKWTPXDHC"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-YHKWTPXDHC');
-  </script>
-
-  <!-- 💰 Google AdSense -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3215014361489762"
-     crossorigin="anonymous"></script>
-
-  <!-- 🧭 Open Graph -->
-  <meta property="og:title" content="About | Bita Digital Hub">
-  <meta property="og:description" content="Bita Digital Hub — simple and free tools for creators, students, and professionals.">
-  <meta property="og:image" content="https://bitadigitalhub.com/assets/taskhub-logo.png">
-  <meta property="og:url" content="https://bitadigitalhub.com/about.html">
-  <meta name="twitter:card" content="summary_large_image">
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="icon" type="image/png" href="assets/taskhub-logo.png" />
 </head>
-
 <body>
-  <!-- 🧭 Navbar -->
   <header class="navbar">
     <div class="nav-left">
-      <img src="./assets/taskhub-logo.svg" alt="TaskHub Logo" class="nav-logo" width="36" height="36">
-      <a href="./index.html" class="brand">Bita Digital Hub</a>
+      <img src="assets/taskhub-logo.svg" alt="Logo" width="36" />
+      <a href="index.html" class="brand">Bita Digital Hub</a>
     </div>
     <nav>
-      <a href="./index.html">Home</a>
-      <a href="./about.html" class="active">About</a>
-      <a href="./privacy.html">Privacy</a>
-      <a href="mailto:contact@bitadigitalhub.com">📩 contact@bitadigitalhub.com</a>
+      <a href="index.html">Home</a>
+      <a href="about.html" class="active">About</a>
+      <a href="services.html">Services</a>
+      <a href="projects.html">Projects</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
-  <!-- 🌍 Language Toggle -->
-  <div class="lang-btns" style="margin-top: 2rem;">
-    <button id="btnEnglish">English</button>
-    <button id="btnFarsi">فارسی</button>
-  </div>
-
-  <!-- 🧠 About Section -->
-  <section class="tool-box" id="aboutBox" style="text-align:left;">
-    <h1 id="title">About Bita Digital Hub</h1>
-    <p id="intro"><strong>Bita Digital Hub</strong> is a free collection of smart, practical, and time-saving tools built for creators, students, and digital professionals. Our goal is simple — to make your everyday online tasks easier, faster, and more reliable — all in one place.</p>
-
-    <h2 id="offerTitle">🌍 What We Offer</h2>
-    <p id="offerText">Bita Digital Hub combines essential digital utilities into a single clean platform:</p>
-    <ul id="offerList" style="margin-left:1.5rem;">
-      <li>📁 <strong>File Converter</strong> — Convert between PDF, Word, Excel, and image formats easily.</li>
-      <li>📦 <strong>ZIP & Unzip</strong> — Compress or extract files online with one click.</li>
-      <li>📊 <strong>CSV & Excel Cleaner</strong> — Merge, clean, and format spreadsheet data fast.</li>
-      <li>🔐 <strong>Password Generator</strong> — Create strong, unique passwords instantly.</li>
-      <li>🌐 <strong>URL Shortener & QR Generator</strong> — Share professional, trackable links.</li>
-      <li>💬 <strong>Social Media Audit</strong> — Analyze your post engagement and caption quality.</li>
-      <li>🤖 <strong>AI Caption & Bio Generators</strong> — Instantly write professional captions or bios with AI.</li>
-    </ul>
-
-    <h2 id="missionTitle">🎯 Our Mission</h2>
-    <p id="missionText">We believe technology should be simple and accessible. Bita Digital Hub was built with the mission to give everyone — from data engineers and marketers to students — access to reliable digital tools without cost or complexity.</p>
-
-    <h2 id="whoTitle">🤝 Who We Are</h2>
-    <p id="whoText">Bita Digital Hub was created by <strong>Bita Ashoori</strong>, a Vancouver-based Data Engineer and digital creator passionate about building useful tools that empower people to work smarter online. What started as a small set of utilities for data and file handling has grown into a full online productivity hub serving users worldwide.</p>
-
-    <h2 id="contactTitle">💌 Get in Touch</h2>
-    <p id="contactText">We love feedback, collaboration, and new ideas! Email us anytime at <a href="mailto:contact@bitadigitalhub.com">contact@bitadigitalhub.com</a>.</p>
+  <section class="tool-header">
+    <h1>About Bita Digital Hub</h1>
+    <p>Blending data engineering, digital marketing, and automation into one practical space.</p>
   </section>
 
-  <!-- 📢 AdSense -->
-  <div class="ad-placeholder" style="text-align:center; margin:2rem auto;">
-    <ins class="adsbygoogle"
-         style="display:block; text-align:center;"
-         data-ad-client="ca-pub-3215014361489762"
-         data-ad-slot="5555555555"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-  </div>
-
-  <!-- 🧭 Footer -->
-  <footer>
+  <section class="container" style="max-width:850px;">
     <p>
-      <a href="./privacy.html">Privacy Policy</a> |
-      © 2025 <strong>Bita Digital Hub</strong> — Fast, Simple, Free Tools
+      Bita Digital Hub started as a place to share tools, templates, and projects built for real businesses —
+      healthcare, retail, public sector — and then expanded into online education and creator tools.
     </p>
+    <p style="margin-top:1rem;">
+      We focus on systems that actually get used: data pipelines, lead-gen pages, dashboards, and AI-assist tools.
+      Everything is documented, simple, and designed for people who don’t want to waste time rebuilding the same thing.
+    </p>
+
+    <h2 style="margin-top:2rem;">What makes us different</h2>
+    <ul style="margin-top:0.5rem;line-height:1.7;">
+      <li>Data mindset (reliable, repeatable, logged)</li>
+      <li>Marketing mindset (funnels, audience, monetization)</li>
+      <li>Teaching mindset (clear, step-by-step, bilingual)</li>
+    </ul>
+  </section>
+
+  <footer>
+    <p>© 2025 Bita Digital Hub</p>
   </footer>
-
-  <!-- ⚙️ Language Script -->
-  <script>
-    const texts = {
-      en: {
-        title: "About Bita Digital Hub",
-        intro: "Bita Digital Hub is a free collection of smart, practical, and time-saving tools built for creators, students, and digital professionals. Our goal is simple — to make your everyday online tasks easier, faster, and more reliable — all in one place.",
-        offerTitle: "🌍 What We Offer",
-        offerText: "Bita Digital Hub combines essential digital utilities into a single clean platform:",
-        offerList: [
-          "📁 <strong>File Converter</strong> — Convert between PDF, Word, Excel, and image formats easily.",
-          "📦 <strong>ZIP & Unzip</strong> — Compress or extract files online with one click.",
-          "📊 <strong>CSV & Excel Cleaner</strong> — Merge, clean, and format spreadsheet data fast.",
-          "🔐 <strong>Password Generator</strong> — Create strong, unique passwords instantly.",
-          "🌐 <strong>URL Shortener & QR Generator</strong> — Share professional, trackable links.",
-          "💬 <strong>Social Media Audit</strong> — Analyze your post engagement and caption quality.",
-          "🤖 <strong>AI Caption & Bio Generators</strong> — Instantly write professional captions or bios with AI."
-        ],
-        missionTitle: "🎯 Our Mission",
-        missionText: "We believe technology should be simple and accessible. Bita Digital Hub was built with the mission to give everyone — from data engineers and marketers to students — access to reliable digital tools without cost or complexity.",
-        whoTitle: "🤝 Who We Are",
-        whoText: "Bita Digital Hub was created by Bita Ashoori, a Vancouver-based Data Engineer and digital creator passionate about building useful tools that empower people to work smarter online. What started as a small set of utilities for data and file handling has grown into a full online productivity hub serving users worldwide.",
-        contactTitle: "💌 Get in Touch",
-        contactText: "We love feedback, collaboration, and new ideas! Email us anytime at contact@bitadigitalhub.com."
-      },
-      fa: {
-        title: "درباره بیتا دیجیتال هاب",
-        intro: "بیتا دیجیتال هاب مجموعه‌ای رایگان از ابزارهای هوشمند و کاربردی است که برای سازندگان محتوا، دانشجویان و متخصصان دیجیتال ساخته شده است. هدف ما ساده است — انجام کارهای روزمره آنلاین شما را آسان‌تر، سریع‌تر و قابل اعتمادتر کنیم.",
-        offerTitle: "🌍 آنچه ارائه می‌دهیم",
-        offerText: "بیتا دیجیتال هاب ابزارهای دیجیتال ضروری را در یک پلتفرم تمیز و یکپارچه ترکیب می‌کند:",
-        offerList: [
-          "📁 <strong>تبدیل‌گر فایل</strong> — به‌راحتی بین فرمت‌های PDF، Word، Excel و تصویر تبدیل کنید.",
-          "📦 <strong>فشرده‌سازی و استخراج</strong> — فایل‌ها را با یک کلیک فشرده یا از حالت فشرده خارج کنید.",
-          "📊 <strong>پاک‌کننده CSV و Excel</strong> — داده‌های جدول را سریع تمیز، ادغام و قالب‌بندی کنید.",
-          "🔐 <strong>تولیدکننده رمز عبور</strong> — رمزهای قوی و منحصربه‌فرد بسازید.",
-          "🌐 <strong>کوتاه‌کننده لینک و تولیدکننده QR</strong> — لینک‌های حرفه‌ای و قابل‌ردیابی بسازید.",
-          "💬 <strong>ارزیاب شبکه‌های اجتماعی</strong> — تعامل و کیفیت کپشن‌های خود را تحلیل کنید.",
-          "🤖 <strong>تولیدکننده کپشن و بیو هوش مصنوعی</strong> — کپشن‌ها و بیوهای حرفه‌ای را با کمک هوش مصنوعی بنویسید."
-        ],
-        missionTitle: "🎯 مأموریت ما",
-        missionText: "ما باور داریم فناوری باید ساده و در دسترس باشد. بیتا دیجیتال هاب با هدف دسترسی آسان همه افراد — از مهندسان داده و بازاریابان تا دانشجویان — به ابزارهای دیجیتال قابل اعتماد و رایگان ساخته شد.",
-        whoTitle: "🤝 ما که هستیم",
-        whoText: "بیتا دیجیتال هاب توسط بیتا عشوری، مهندس داده ساکن ونکوور و خالق دیجیتال ساخته شده است که به ساخت ابزارهای مفید برای کار هوشمندتر آنلاین علاقه‌مند است. آنچه به‌عنوان مجموعه کوچکی از ابزارهای داده و فایل آغاز شد، اکنون به یک پلتفرم کامل بهره‌وری آنلاین تبدیل شده است.",
-        contactTitle: "💌 تماس با ما",
-        contactText: "ما از بازخورد، همکاری و ایده‌های جدید استقبال می‌کنیم! هر زمان از طریق contact@bitadigitalhub.com با ما در تماس باشید."
-      }
-    };
-
-    function setLang(lang) {
-      const t = texts[lang];
-      document.body.dir = lang === "fa" ? "rtl" : "ltr";
-      document.getElementById("title").innerText = t.title;
-      document.getElementById("intro").innerText = t.intro;
-      document.getElementById("offerTitle").innerText = t.offerTitle;
-      document.getElementById("offerText").innerText = t.offerText;
-      document.getElementById("offerList").innerHTML = t.offerList.map(i => `<li>${i}</li>`).join("");
-      document.getElementById("missionTitle").innerText = t.missionTitle;
-      document.getElementById("missionText").innerText = t.missionText;
-      document.getElementById("whoTitle").innerText = t.whoTitle;
-      document.getElementById("whoText").innerText = t.whoText;
-      document.getElementById("contactTitle").innerText = t.contactTitle;
-      document.getElementById("contactText").innerText = t.contactText;
-    }
-
-    document.getElementById("btnEnglish").addEventListener("click", () => setLang("en"));
-    document.getElementById("btnFarsi").addEventListener("click", () => setLang("fa"));
-  </script>
 </body>
 </html>
