added login smaller

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <!-- 🌐 Language Dropdown -->
       <div class="lang-switch">
         <button class="lang-toggle">
-          🌐 <img src="https://flagcdn.com/16x12/gb.png" alt="English flag" /> English ▾
+           <img src="https://flagcdn.com/16x12/gb.png" alt="English flag" /> English ▾
         </button>
         <ul class="lang-menu">
           <li><a href="index-en.html"><img src="https://flagcdn.com/16x12/gb.png" alt="English flag" /> English</a></li>
