--- a/index.html
+++ b/index.html
@@ -24,18 +24,7 @@
       <a href="about.html">About</a>
       <a href="services.html">Services</a>
       <a href="projects.html">Projects</a>
-
-      <!-- 🔧 Tools Dropdown -->
-      <div class="dropdown">
-        <a href="tools.html" class="dropbtn">Tools ▾</a>
-        <div class="dropdown-content">
-          <a href="tools/file-converter.html">File Converter</a>
-          <a href="tools/social-audit.html">Social Audit</a>
-          <a href="tools/qr-generator.html">QR Generator</a>
-          <a href="tools/online-business.html">Online Business Model</a>
-        </div>
-      </div>
-
+      <a href="tools.html" class="dropbtn">Tools</a>
       <a href="contact.html">Contact</a>
     </nav>
 
