--- a/thanks.html
+++ b/thanks.html
@@ -48,11 +48,11 @@
   <header class="navbar">
     <div class="nav-left">
       <img src="assets/taskhub-logo.svg" alt="Bita Digital Hub Logo" width="36" height="36" />
-      <a href="index-en.html" class="brand">Bita Digital Hub</a>
+      <a href="index.html" class="brand">Bita Digital Hub</a>
     </div>
 
     <nav class="nav-links">
-      <a href="index-en.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="services.html">Services</a>
       <a href="projects.html">Projects</a>
@@ -66,7 +66,7 @@
           <img src="https://flagcdn.com/16x12/gb.png" alt="English flag" /> English ▾
         </button>
         <ul class="lang-menu">
-          <li><a href="index-en.html"><img src="https://flagcdn.com/16x12/gb.png" alt="English flag" /> English</a></li>
+          <li><a href="index.html"><img src="https://flagcdn.com/16x12/gb.png" alt="English flag" /> English</a></li>
           <li><a href="index-fa.html"><img src="https://flagcdn.com/16x12/ir.png" alt="Persian flag" /> فارسی</a></li>
         </ul>
       </div>
@@ -78,17 +78,21 @@
   <main>
     <h1>Thank You!</h1>
     <p>Your message has been received. We’ll get back to you soon.</p>
-    <a href="index-en.html" class="btn-primary">Return to Home</a>
+    <a href="index.html" class="btn-primary">Return to Home</a>
   </main>
 
   <!-- ⚫ Footer -->
   <footer class="footer">
     <div class="footer-container">
+      <!-- Column 1 -->
       <div class="footer-col">
         <div class="footer-logo">
           <img src="assets/taskhub-logo.svg" alt="Bita Digital Hub Logo" width="36">
           <h3>Bita Digital Hub</h3>
-          <p>Empowering creators and professionals with automation, analytics, and online-business solutions.</p>
+          <p>
+            Empowering creators and data-driven professionals with automation,
+            analytics, and online-business solutions.
+          </p>
           <div class="social-links">
             <a href="https://linkedin.com/in/bitaashoori" target="_blank">LinkedIn</a>
             <a href="https://youtube.com/@bitadigital" target="_blank">YouTube</a>
@@ -97,6 +101,7 @@
         </div>
       </div>
 
+      <!-- Column 2 -->
       <div class="footer-col">
         <h4>Quick Links</h4>
         <ul>
@@ -109,6 +114,7 @@
         </ul>
       </div>
 
+      <!-- Column 3 -->
       <div class="footer-col">
         <h4>Services</h4>
         <ul>
@@ -118,6 +124,7 @@
         </ul>
       </div>
 
+      <!-- Column 4 -->
       <div class="footer-col">
         <h4>Contact</h4>
         <ul>
