--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="nav-left">
       <img src="assets/taskhub-logo.svg" alt="Bita Digital Hub Logo" width="36" height="36" />
       <div class="brand-group">
-        <a href="index-en.html" class="brand">Bita Digital Hub</a>
+        <a href="index.html" class="brand">Bita Digital Hub</a>
       </div>
     </div>
 
@@ -104,14 +104,18 @@
     </section>
   </main>
 
-  <!-- ⚫ Footer -->
+   <!-- ⚫ Footer -->
   <footer class="footer">
     <div class="footer-container">
+      <!-- Column 1 -->
       <div class="footer-col">
         <div class="footer-logo">
           <img src="assets/taskhub-logo.svg" alt="Bita Digital Hub Logo" width="36">
           <h3>Bita Digital Hub</h3>
-          <p>Empowering creators and data-driven entrepreneurs with automation, analytics, and online-business solutions.</p>
+          <p>
+            Empowering creators and data-driven professionals with automation,
+            analytics, and online-business solutions.
+          </p>
           <div class="social-links">
             <a href="https://linkedin.com/in/bitaashoori" target="_blank">LinkedIn</a>
             <a href="https://youtube.com/@bitadigital" target="_blank">YouTube</a>
@@ -120,10 +124,11 @@
         </div>
       </div>
 
+      <!-- Column 2 -->
       <div class="footer-col">
         <h4>Quick Links</h4>
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index-en.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="projects.html">Projects</a></li>
@@ -132,6 +137,7 @@
         </ul>
       </div>
 
+      <!-- Column 3 -->
       <div class="footer-col">
         <h4>Services</h4>
         <ul>
@@ -141,11 +147,11 @@
         </ul>
       </div>
 
+      <!-- Column 4 -->
       <div class="footer-col">
         <h4>Contact</h4>
         <ul>
           <li><strong>Email:</strong> bitadigitalhub@gmail.com</li>
-          <li><strong>Phone:</strong> +1 (604) 724-6960</li>
           <li><strong>Location:</strong> Vancouver, Canada</li>
         </ul>
       </div>
