--- a/privacy.html
+++ b/privacy.html
@@ -94,12 +94,67 @@
     <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
   </div>
 
-  <!-- 🧭 Footer -->
-  <footer>
-    <p>
-      © 2025 <strong>Bita Digital Hub</strong> | Built for simplicity & trust.<br>
-      <a href="privacy.html">Privacy Policy</a> · <a href="about.html">About</a>
-    </p>
+   <!-- ⚫ Footer -->
+  <footer class="footer">
+    <div class="footer-container">
+      <!-- Column 1 -->
+      <div class="footer-col">
+        <div class="footer-logo">
+          <img src="assets/taskhub-logo.svg" alt="Bita Digital Hub Logo" width="36">
+          <h3>Bita Digital Hub</h3>
+          <p>
+            Empowering creators and data-driven professionals with automation,
+            analytics, and online-business solutions.
+          </p>
+          <div class="social-links">
+            <a href="https://linkedin.com/in/bitaashoori" target="_blank">LinkedIn</a>
+            <a href="https://youtube.com/@bitadigital" target="_blank">YouTube</a>
+            <a href="https://instagram.com/bitadigitalhub" target="_blank">Instagram</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Column 2 -->
+      <div class="footer-col">
+        <h4>Quick Links</h4>
+        <ul>
+          <li><a href="index-en.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="tools.html">Tools</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+
+      <!-- Column 3 -->
+      <div class="footer-col">
+        <h4>Services</h4>
+        <ul>
+          <li><a href="services.html#digital-marketing">Digital Marketing</a></li>
+          <li><a href="services.html#data-engineering">Data & Automation</a></li>
+          <li><a href="tools/online-business.html">Online Business</a></li>
+        </ul>
+      </div>
+
+      <!-- Column 4 -->
+      <div class="footer-col">
+        <h4>Contact</h4>
+        <ul>
+          <li><strong>Email:</strong> bitadigitalhub@gmail.com</li>
+          <li><strong>Location:</strong> Vancouver, Canada</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      <p>© 2025 Bita Digital Hub — Smart, Simple, Human.</p>
+      <div>
+        <a href="privacy.html">Privacy</a> | 
+        <a href="terms.html">Terms</a> | 
+        <a href="cookies.html">Cookies</a>
+      </div>
+    </div>
   </footer>
 
   <!-- ⚙️ Language Script -->
