--- a/projects.html
+++ b/projects.html
@@ -71,14 +71,18 @@
     </div>
   </main>
 
-  <!-- ⚫ Footer -->
+   <!-- ⚫ Footer -->
   <footer class="footer">
     <div class="footer-container">
+      <!-- Column 1 -->
       <div class="footer-col">
         <div class="footer-logo">
           <img src="assets/taskhub-logo.svg" alt="Bita Digital Hub Logo" width="36">
           <h3>Bita Digital Hub</h3>
-          <p>Empowering creators and professionals with automation, analytics, and online-business solutions.</p>
+          <p>
+            Empowering creators and data-driven professionals with automation,
+            analytics, and online-business solutions.
+          </p>
           <div class="social-links">
             <a href="https://linkedin.com/in/bitaashoori" target="_blank">LinkedIn</a>
             <a href="https://youtube.com/@bitadigital" target="_blank">YouTube</a>
@@ -87,6 +91,7 @@
         </div>
       </div>
 
+      <!-- Column 2 -->
       <div class="footer-col">
         <h4>Quick Links</h4>
         <ul>
@@ -94,10 +99,12 @@
           <li><a href="about.html">About</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="projects.html">Projects</a></li>
+          <li><a href="tools.html">Tools</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
 
+      <!-- Column 3 -->
       <div class="footer-col">
         <h4>Services</h4>
         <ul>
@@ -107,11 +114,11 @@
         </ul>
       </div>
 
+      <!-- Column 4 -->
       <div class="footer-col">
         <h4>Contact</h4>
         <ul>
           <li><strong>Email:</strong> bitadigitalhub@gmail.com</li>
-          <li><strong>Phone:</strong> +1 (604) 724-6960</li>
           <li><strong>Location:</strong> Vancouver, Canada</li>
         </ul>
       </div>
