--- a/services.html
+++ b/services.html
@@ -13,11 +13,11 @@
   <header class="navbar">
     <div class="nav-left">
       <img src="assets/taskhub-logo.svg" alt="Bita Digital Hub Logo" width="36" height="36" />
-      <a href="index-en.html" class="brand">Bita Digital Hub</a>
+      <a href="index.html" class="brand">Bita Digital Hub</a>
     </div>
 
     <nav class="nav-links">
-      <a href="index-en.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="services.html" class="active">Services</a>
       <a href="projects.html">Projects</a>
@@ -32,7 +32,7 @@
           <img src="https://flagcdn.com/16x12/gb.png" alt="English flag" /> English ▾
         </button>
         <ul class="lang-menu">
-          <li><a href="index-en.html"><img src="https://flagcdn.com/16x12/gb.png" alt="English flag" /> English</a></li>
+          <li><a href="index.html"><img src="https://flagcdn.com/16x12/gb.png" alt="English flag" /> English</a></li>
           <li><a href="index-fa.html"><img src="https://flagcdn.com/16x12/ir.png" alt="Persian flag" /> فارسی</a></li>
         </ul>
       </div>
@@ -88,14 +88,18 @@
     </div>
   </main>
 
-  <!-- ⚫ Footer -->
+   <!-- ⚫ Footer -->
   <footer class="footer">
     <div class="footer-container">
+      <!-- Column 1 -->
       <div class="footer-col">
         <div class="footer-logo">
           <img src="assets/taskhub-logo.svg" alt="Bita Digital Hub Logo" width="36">
           <h3>Bita Digital Hub</h3>
-          <p>Empowering creators and professionals with automation, analytics, and online-business solutions.</p>
+          <p>
+            Empowering creators and data-driven professionals with automation,
+            analytics, and online-business solutions.
+          </p>
           <div class="social-links">
             <a href="https://linkedin.com/in/bitaashoori" target="_blank">LinkedIn</a>
             <a href="https://youtube.com/@bitadigital" target="_blank">YouTube</a>
@@ -104,6 +108,7 @@
         </div>
       </div>
 
+      <!-- Column 2 -->
       <div class="footer-col">
         <h4>Quick Links</h4>
         <ul>
@@ -116,15 +121,17 @@
         </ul>
       </div>
 
+      <!-- Column 3 -->
       <div class="footer-col">
         <h4>Services</h4>
         <ul>
-          <li><a href="#digital-marketing">Digital Marketing</a></li>
-          <li><a href="#data-engineering">Data & Automation</a></li>
+          <li><a href="services.html#digital-marketing">Digital Marketing</a></li>
+          <li><a href="services.html#data-engineering">Data & Automation</a></li>
           <li><a href="tools/online-business.html">Online Business</a></li>
         </ul>
       </div>
 
+      <!-- Column 4 -->
       <div class="footer-col">
         <h4>Contact</h4>
         <ul>
