updated footer and remove en

--- a/about.html
+++ b/about.html
@@ -13,11 +13,11 @@
   <header class="navbar">
     <div class="nav-left">
       <img src="assets/taskhub-logo.svg" alt="Bita Digital Hub Logo" width="36" height="36" />
-      <a href="index-en.html" class="brand">Bita Digital Hub</a>
+      <a href="index.html" class="brand">Bita Digital Hub</a>
     </div>
 
     <nav class="nav-links">
-      <a href="index-en.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html" class="active">About</a>
       <a href="services.html">Services</a>
       <a href="projects.html">Projects</a>
@@ -92,7 +92,7 @@
       <div class="footer-col">
         <h4>Quick Links</h4>
         <ul>
-          <li><a href="index-en.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="projects.html">Projects</a></li>
