--- a/projects.html
+++ b/projects.html
@@ -13,11 +13,11 @@
   <header class="navbar">
     <div class="nav-left">
       <img src="assets/taskhub-logo.svg" alt="Bita Digital Hub Logo" width="36" height="36" />
-      <a href="index-en.html" class="brand">Bita Digital Hub</a>
+      <a href="index.html" class="brand">Bita Digital Hub</a>
     </div>
 
     <nav class="nav-links">
-      <a href="index-en.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="services.html">Services</a>
       <a href="projects.html" class="active">Projects</a>
