--- a/index-fa.html
+++ b/index-fa.html
@@ -35,7 +35,7 @@
           🌐 <img src="https://flagcdn.com/16x12/ir.png" alt="Persian flag" /> فارسی ▾
         </button>
         <ul class="lang-menu">
-          <li><a href="index-en.html"><img src="https://flagcdn.com/16x12/gb.png" alt="English flag" /> English</a></li>
+          <li><a href="index.html"><img src="https://flagcdn.com/16x12/gb.png" alt="English flag" /> English</a></li>
           <li><a href="index-fa.html"><img src="https://flagcdn.com/16x12/ir.png" alt="Persian flag" /> فارسی</a></li>
         </ul>
       </div>
