updated footer with email in tools page

--- a/tools.html
+++ b/tools.html
@@ -13,11 +13,11 @@
   <header class="navbar">
     <div class="nav-left">
       <img src="assets/taskhub-logo.svg" alt="Bita Digital Hub Logo" width="36" height="36" />
-      <a href="index-en.html" class="brand">Bita Digital Hub</a>
+      <a href="index.html" class="brand">Bita Digital Hub</a>
     </div>
 
     <nav class="nav-links">
-      <a href="index-en.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="services.html">Services</a>
       <a href="projects.html">Projects</a>
@@ -32,7 +32,7 @@
           <img src="https://flagcdn.com/16x12/gb.png" alt="English flag" /> English ▾
         </button>
         <ul class="lang-menu">
-          <li><a href="index-en.html"><img src="https://flagcdn.com/16x12/gb.png" alt="English flag" /> English</a></li>
+          <li><a href="index.html"><img src="https://flagcdn.com/16x12/gb.png" alt="English flag" /> English</a></li>
           <li><a href="index-fa.html"><img src="https://flagcdn.com/16x12/ir.png" alt="Persian flag" /> فارسی</a></li>
         </ul>
       </div>
@@ -106,7 +106,7 @@
       <div class="footer-col">
         <h4>Quick Links</h4>
         <ul>
-          <li><a href="index-en.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="projects.html">Projects</a></li>
