--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,18 @@
       <a href="about.html">About</a>
       <a href="services.html">Services</a>
       <a href="projects.html" class="active">Projects</a>
+
+      <!-- 🔽 Tools Dropdown -->
+      <div class="dropdown">
+        <span class="dropbtn">Tools ▾</span>
+        <div class="dropdown-content">
+          <a href="tools/social-audit.html">Social Media Audit</a>
+          <a href="tools/url-shortener.html">URL Shortener</a>
+          <a href="tools/qr-generator.html">QR Generator</a>
+          <a href="tools/file-converter.html">File Converter</a>
+        </div>
+      </div>
+
       <a href="contact.html">Contact</a>
     </nav>
 
@@ -31,8 +43,8 @@
           <img src="https://flagcdn.com/16x12/gb.png" alt="English flag" /> English ▾
         </button>
         <ul class="lang-menu">
-          <li><a href="index-en.html"><img src="https://flagcdn.com/16x12/gb.png" alt="English flag" /> English</a></li>
-          <li><a href="index-fa.html"><img src="https://flagcdn.com/16x12/ir.png" alt="Persian flag" /> فارسی</a></li>
+          <li><a href="projects.html"><img src="https://flagcdn.com/16x12/gb.png" alt="English flag" /> English</a></li>
+          <li><a href="projects-fa.html"><img src="https://flagcdn.com/16x12/ir.png" alt="Persian flag" /> فارسی</a></li>
         </ul>
       </div>
       <a href="login.html" class="btn-primary get-started">Login</a>
@@ -71,7 +83,7 @@
     </div>
   </main>
 
-   <!-- ⚫ Footer -->
+  <!-- ⚫ Footer -->
   <footer class="footer">
     <div class="footer-container">
       <!-- Column 1 -->
@@ -80,14 +92,9 @@
           <img src="assets/taskhub-logo.svg" alt="Bita Digital Hub Logo" width="36">
           <h3>Bita Digital Hub</h3>
           <p>
-            Empowering creators and data-driven professionals with automation,
-            analytics, and online-business solutions.
+            Empowering creators and professionals with automation, analytics, 
+            and online-business solutions.
           </p>
-          <div class="social-links">
-            <a href="https://linkedin.com/in/bitaashoori" target="_blank">LinkedIn</a>
-            <a href="https://youtube.com/@bitadigital" target="_blank">YouTube</a>
-            <a href="https://instagram.com/bitadigitalhub" target="_blank">Instagram</a>
-          </div>
         </div>
       </div>
 
@@ -95,11 +102,10 @@
       <div class="footer-col">
         <h4>Quick Links</h4>
         <ul>
-          <li><a href="index-en.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="projects.html">Projects</a></li>
-          <li><a href="tools.html">Tools</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
@@ -118,7 +124,7 @@
       <div class="footer-col">
         <h4>Contact</h4>
         <ul>
-          <li><strong>Email:</strong>  Contact@bitadigitalhub.com</li>
+          <li><strong>Email:</strong> contact@bitadigitalhub.com</li>
           <li><strong>Location:</strong> Vancouver, Canada</li>
         </ul>
       </div>
@@ -134,7 +140,7 @@
     </div>
   </footer>
 
-  <!-- Dropdown JS -->
+  <!-- 🌐 Dropdown JS -->
   <script>
     const langToggle = document.querySelector('.lang-toggle');
     const langMenu = document.querySelector('.lang-menu');
