--- a/bk/header2.html
+++ b/bk/header2.html
@@ -1,19 +1,18 @@
 <!-- 🧭 Header / Navbar Component -->
 <header class="navbar">
   <div class="nav-container">
-    
-    <!-- 🔹 Left: Brand -->
+    <!-- Left: Brand -->
     <div class="nav-left">
       <a href="index.html" class="brand-group">
-        <img src="assets/taskhub-logo.svg" alt="Bita Digital Hub Logo" class="brand-logo" />
-        <span class="brand-name">Bita Digital Hub</span>
+        <img src="assets/taskhub-logo.svg" alt=" Bita Digital Hub Logo" width="36" height="36" />
+        <span class="brand">  Bita Digital Hub</span>
       </a>
     </div>
 
-    <!-- 🍔 Mobile Menu Toggle -->
-    <button class="menu-toggle" aria-label="Toggle menu">☰</button>
+    <!-- 🍔 Mobile Menu Toggle ☰ --> 
+    <button class="menu-toggle" aria-label="Toggle menu"></button> 
 
-    <!-- 🔹 Center: Navigation -->
+    <!-- Center: Navigation -->
     <nav class="nav-links">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -22,7 +21,7 @@
       <div class="dropdown">
         <button class="dropbtn">Tools ▾</button>
         <div class="dropdown-content">
-          <a href="tools.html#overview">Overview</a>
+          <a href="Tools.html#overview">Overview</a>
           <a href="tools/social-audit.html">Social Media Audit</a>
           <a href="tools/url-shortener.html">URL Shortener</a>
           <a href="tools/qr-generator.html">QR Generator</a>
@@ -35,7 +34,7 @@
       <div class="dropdown">
         <button class="dropbtn">Services ▾</button>
         <div class="dropdown-content">
-          <a href="services.html#overview">Overview</a>
+          <a href="Services.html#overview">Overview</a>
           <a href="services.html#marketing">Digital Marketing Systems</a>
           <a href="services.html#data">Data & Automation</a>
           <a href="services.html#bots">Telegram Bot Development</a>
@@ -47,7 +46,7 @@
       <div class="dropdown">
         <button class="dropbtn">Sources ▾</button>
         <div class="dropdown-content">
-          <a href="sources.html#overview">Overview</a>
+          <a href="Sources.html#overview">Overview</a>
           <a href="sources.html#datasets">AI Datasets</a>
           <a href="sources.html#templates">Marketing Templates</a>
           <a href="sources.html#learning">Learning Resources</a>
@@ -69,7 +68,7 @@
       <a href="contact.html">Contact</a>
     </nav>
 
-    <!-- 🔹 Right: Language + Login -->
+    <!-- Right: Language + Login -->
     <div class="nav-actions">
       <div class="lang-switch">
         <button class="lang-toggle">
@@ -82,7 +81,6 @@
       </div>
       <a href="login.html" class="btn-primary get-started">Login</a>
     </div>
-
   </div>
 </header>
 
@@ -101,7 +99,7 @@
   const navLinks = document.querySelector('.nav-links');
   toggle?.addEventListener('click', () => {
     navLinks.classList.toggle('active');
-    toggle.textContent = navLinks.classList.contains('active') ? '✕' : '☰';
+    toggle.textContent = navLinks.classList.contains('active') ; //? '✕' : '☰'
   });
 
   // 🟢 Highlight Active Page
