--- a/index.html
+++ b/index.html
@@ -3,85 +3,149 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BI Digital Hub | Innovative Digital Solutions</title>
-  <meta name="description" content="BI Digital Hub accompanies you in your digital transformation with Cloud, ERP, Business Intelligence, and AI solutions." />
-
-  <!-- 🌈 Unified Styles -->
-  <link rel="stylesheet" href="css/theme.css" />
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/components.css" />
-  <link rel="stylesheet" href="css/responsive.css" />
-  <link rel="icon" type="image/png" href="assets/taskhub-logo.png" />
+  <title>Bita Digital Hub</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="script.js" defer></script>
 </head>
 
 <body>
-  <!-- 🧭 Header Import -->
-  <div id="header"></div>
-  <script>
-    fetch("components/header.html")
-      .then(res => res.text())
-      .then(html => document.getElementById("header").innerHTML = html)
-      .catch(err => console.error("Header failed to load:", err));
-  </script>
+  <!-- ===== Header (loaded dynamically) ===== -->
+  <div id="header-placeholder"></div>
 
-  <!-- 🌟 Hero Section -->
-  <section class="hero-section grid-bg">
+  <!-- ================= HOME ================= -->
+  <section id="home" class="section hero">
     <div class="hero-content">
-      <div class="hero-badge">⚡ Innovative IT Solutions</div>
-      <h1 class="hero-title">Innovative Digital Solutions</h1>
-      <p class="hero-subtitle">
-        BI Digital Hub accompanies you in your digital transformation with Cloud, ERP, Business
-        Intelligence, and Artificial Intelligence solutions.
-      </p>
-
-      <div class="hero-buttons">
-        <a href="services.html" class="btn-primary">Discover our services →</a>
-        <a href="about.html" class="btn-secondary">Learn more</a>
+      <h1>Innovative Digital Solutions</h1>
+      <p>Bita Digital Hub empowers creators and businesses to automate, scale, and grow using Data, Cloud, and AI-powered systems.</p>
+      <div class="cta-buttons">
+        <a href="#courses" class="btn primary">Start Your Online Business</a>
+        <a href="#contact" class="btn outline">Book a Call</a>
       </div>
     </div>
   </section>
 
-  <!-- 🧩 Services Preview -->
-  <section class="container" style="margin-top: 4rem;">
-    <h2 class="section-title">Our Expertise</h2>
-    <div class="tool-grid">
+  <!-- ================= ABOUT ================= -->
+  <section id="about" class="section about light">
+    <div class="about-grid">
+      <div class="about-text">
+        <h2>About Bita Digital Hub</h2>
+        <h4>Leading digital transformation with data, AI, and automation</h4>
+        <p>
+          At Bita Digital Hub, we believe in the power of technology to create opportunities for individuals and businesses.
+          Our mission is to simplify the path to digital success — from strategy and system design to full automation.
+        </p>
+        <p>
+          With years of experience in analytics, cloud platforms, and AI solutions, we help you build, optimize, and scale your digital presence with confidence.
+        </p>
+        <p class="signature">— Bita Ashoori, Founder & Data Engineer</p>
+      </div>
+      <div class="about-card">
+        <div class="about-icon">💡</div>
+        <h3>Expert Team</h3>
+        <p>Building your digital future through smart systems and creative automation.</p>
+      </div>
+    </div>
 
-      <a class="tool-card" href="tools.html">
-        <h3>Automation & Tools</h3>
-        <p>Optimize your workflow with powerful tools like file converters, QR generators, and custom bots.</p>
-      </a>
-
-      <a class="tool-card" href="services.html">
-        <h3>Data & Analytics</h3>
-        <p>Build data pipelines, dashboards, and analytics systems powered by cloud technologies.</p>
-      </a>
-
-      <a class="tool-card" href="sources.html">
-        <h3>Marketing & Content</h3>
-        <p>Access templates, datasets, and creative resources to scale your digital marketing.</p>
-      </a>
-
-      <a class="tool-card" href="franchise.html">
-        <h3>Franchise Academy</h3>
-        <p>Start your own online franchise business with guidance and ready-to-use assets.</p>
-      </a>
+    <div class="about-values">
+      <div class="value-box">
+        <h4>Our Mission</h4>
+        <p>Empower creators and professionals with data-driven digital systems.</p>
+      </div>
+      <div class="value-box">
+        <h4>Our Vision</h4>
+        <p>To be the trusted partner for digital growth through innovation and analytics.</p>
+      </div>
+      <div class="value-box">
+        <h4>Our Values</h4>
+        <p>Creativity, Integrity, Collaboration, and Continuous Learning.</p>
+      </div>
     </div>
   </section>
 
-  <!-- 💬 CTA Section -->
-  <section class="contact-section">
-    <h2>Ready to Start Your Digital Journey?</h2>
-    <p>Contact our team today to explore how we can help you automate, scale, and innovate your business.</p>
-    <a href="contact.html" class="btn-primary">Get in Touch</a>
+  <!-- ================= SERVICES ================= -->
+  <section id="services" class="section services">
+    <h2>Our Services</h2>
+    <p class="section-sub">Complete solutions for your digital transformation</p>
+
+    <div class="cards">
+      <div class="card">
+        <h3>AI Personal Branding</h3>
+        <p>Build your brand identity using AI-generated strategies, visuals, and insights.</p>
+      </div>
+      <div class="card">
+        <h3>Website Creation</h3>
+        <p>Responsive, optimized websites designed for performance and impact.</p>
+      </div>
+      <div class="card">
+        <h3>Data & Analytics</h3>
+        <p>Transform raw data into actionable insights with dashboards and reports.</p>
+      </div>
+      <div class="card">
+        <h3>Telegram Robots</h3>
+        <p>Automate customer engagement, lead collection, and marketing with smart bots.</p>
+      </div>
+    </div>
   </section>
 
-  <!-- 🦶 Footer Import -->
-  <div id="footer"></div>
-  <script>
-    fetch("components/footer.html")
-      .then(res => res.text())
-      .then(html => document.getElementById("footer").innerHTML = html)
-      .catch(err => console.error("Footer failed to load:", err));
-  </script>
+  <!-- ================= COURSES ================= -->
+  <section id="courses" class="section courses light">
+    <h2>Courses & Learning</h2>
+    <p class="section-sub">Grow your skills and business in the digital economy</p>
+
+    <div class="cards">
+      <div class="card">
+        <h3>Free Online Courses</h3>
+        <p>Access beginner-friendly courses on data, AI, and digital marketing.</p>
+      </div>
+      <div class="card">
+        <h3>Digital Marketing Mastery</h3>
+        <p>Learn how to promote your brand and grow your online presence effectively.</p>
+      </div>
+      <div class="card">
+        <h3>Online Franchise System</h3>
+        <p>Start your own business using our automation-ready digital franchise model.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- ================= TOOLS ================= -->
+  <section id="tools" class="section tools">
+    <h2>Tools & Automation</h2>
+    <p class="section-sub">AI and automation tools to power your productivity</p>
+
+    <div class="cards">
+      <div class="card">
+        <h3>Social Media Audit</h3>
+        <p>Analyze your engagement and get data-driven insights for growth.</p>
+      </div>
+      <div class="card">
+        <h3>URL Shortener</h3>
+        <p>Track and manage your links for marketing and performance analysis.</p>
+      </div>
+      <div class="card">
+        <h3>QR Generator</h3>
+        <p>Create custom QR codes for campaigns, websites, or product tags.</p>
+      </div>
+      <div class="card">
+        <h3>Telegram Bot Builder</h3>
+        <p>Design and deploy bots to automate leads, sales, and customer interactions.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- ================= CONTACT ================= -->
+  <section id="contact" class="section contact light">
+    <h2>Contact Us</h2>
+    <p class="section-sub">Let’s build something amazing together</p>
+    <form>
+      <input type="text" placeholder="Your Name" required />
+      <input type="email" placeholder="Your Email" required />
+      <textarea placeholder="Your Message" required></textarea>
+      <button type="submit" class="btn primary">Send Message</button>
+    </form>
+  </section>
+
+  <!-- ===== Footer (loaded dynamically) ===== -->
+  <div id="footer-placeholder"></div>
 </body>
 </html>
