fix mobile error2

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <section id="about" class="section about light">
     <div class="about-grid">
       <div class="about-text">
-        <h2>About Bita Digital Hub</h2>
+        <h3>Welcome to Bita Digital Hub</h3>
         <h4>Leading digital transformation with data, AI, and automation</h4>
         <p>
           At Bita Digital Hub, we believe in the power of technology to create new opportunities 
